add nexjs workflow

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopping-basket-tutorial-starter",
+  "name": "shopping-basket",
   "version": "0.1.0",
   "private": true,
   "scripts": {
