--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -22,10 +22,10 @@ jobs:
       run: npm install
     
     - name: Build page
-      run: next build
+      run: npm run build
       
     - name: Install Surge
       run: npm install -g surge
       
     - name: Run surge
-      run: surge ./build https://shopping-basket-redux.surge.sh --token ${{secrets.SURGE_TOKEN}}
+      run: surge ./next https://shopping-basket-redux.surge.sh --token ${{secrets.SURGE_TOKEN}}
